--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
-	"inputSequence": [1,0,1,0],
+	"inputSequence": [[1,1,1,1],[1,0,1,0],[1,1,1,1],[1,1,1,1],[1,1,1,1]],
+
 "input_size" : 4,
 		"mem_size"  : 20,
 		"mem_width"  : 4,
