added some brainfuck autocoding

--- a/config.json
+++ b/config.json
@@ -1,12 +1,73 @@
 {
-	"inputSequence": [[0.1,0.2,0.5,0.6,0.3,0.9,0.8,0.0,0.4]],
-	"targetSequence": [[0.1,0.2,0.3,0.4,0.5,0.6,0.7,8.0,9.0]],
-
-"input_size" : 9,
-		"mem_size"  : 20,
-		"mem_width"  : 9,
-		"output_size" : 9,
-		"shift_width" : 3,
-		"layer_sizes": 20,
-		"no_heads": 1
+  "inputSequence": [
+    [
+      2.5,
+      2.5,
+      2.5,
+      2.5,
+      2.5,
+      2.5,
+      4.5,
+      0.5,
+      2.5,
+      2.5,
+      2.5,
+      2.5,
+      2.5,
+      2.5,
+      2.5,
+      2.5,
+      2.5,
+      2.5,
+      1.5,
+      3.5,
+      5.5,
+      0.5,
+      2.5,
+      2.5,
+      2.5,
+      2.5,
+      2.5,
+      6.5
+    ]
+  ],
+  "targetSequence": [
+    [
+      2.5,
+      2.5,
+      2.5,
+      2.5,
+      2.5,
+      2.5,
+      4.5,
+      0.5,
+      2.5,
+      2.5,
+      2.5,
+      2.5,
+      2.5,
+      2.5,
+      2.5,
+      2.5,
+      2.5,
+      2.5,
+      1.5,
+      3.5,
+      5.5,
+      0.5,
+      2.5,
+      2.5,
+      2.5,
+      2.5,
+      2.5,
+      6.5
+    ]
+  ],
+  "input_size": 28,
+  "mem_size": 20,
+  "mem_width": 28,
+  "output_size": 28,
+  "shift_width": 3,
+  "layer_sizes": 20,
+  "no_heads": 1
 }
